--- a/config/pil/generator_xml.in
+++ b/config/pil/generator_xml.in
@@ -171,28 +171,6 @@ function SetManagedPartition {
 	fi
 }
 
-function XML_GenStorageDevices {
-	bbqid=0
-	lsblk --output NAME,MAJ:MIN,SIZE,TYPE | grep disk | \
-	while read i
-	do
-		name=`echo $i | awk '{ print $1 }'`
-		devid=`echo $i | awk '{ print $2 }'`
-		size=`echo $i | awk '{ print $3 }' | sed s/[A-Z]//g` # not used
-		unit=`echo $i | awk '{ print $3 }' | sed s/[0-9]//g` # not used
-		
-		TYPE=""
-		R_BW=100
-		W_BW=100
-
-		XML_GetStorageDeviceType
-		XML_TestReadWriteBW
-
-		echo "    <storage id=\"$bbqid\" dev=\"$devid\" name=\"$name\" quantity=\"$size\" unit=\"MB\" bw_unit=\"MB/s\" read_bandwidth=\"$R_BW\" write_bandwidth=\"$W_BW\" type=\"$TYPE\"/>" >> $TMP_FOLDER/xml_disks
-		bbqid=`expr $bbqid + 1`
-	done
-}
-
 function XML_GetStorageDeviceType {
 	TYPES=(HDD SSD)
 		if [ -e /sys/block/$name/queue/rotational ]; then
@@ -217,6 +195,25 @@ function XML_GetStorageDeviceType {
 		fi
 }
 
+function ReadTest {
+	CURR_R_BW=$(sudo hdparm -t /dev/$name | awk 'NR==3 {print $11}')
+	CURR_R_BW=${CURR_R_BW%.*}
+	R_BW=$(($R_BW + $CURR_R_BW))
+	COUNT=$(($COUNT + 5))
+}
+
+function WriteTest {
+	DD_OUT=$(dd if=/dev/zero of=./$TEMP_FILE bs=4k count=250k conv=fdatasync 2>&1 >/dev/null | awk 'NR==3{print $10, $11}')
+	CURR_W_BW=$(echo $DD_OUT | awk '{print $1}' | tr ',' '.')
+	if [[ "$(echo $DD_OUT | awk '{print $2}')" == "GB/s" ]]; then
+		CURR_W_BW=$((CURR_W_BW * 1000))
+	fi	
+	COUNT=$(($COUNT + 5))
+	
+	CURR_W_BW=${CURR_W_BW%.*}
+	W_BW=$(($W_BW + CURR_W_BW))
+}
+
 function XML_TestReadWriteBW {
     NUM_ITERS=10
 	TEMP_FILE=tempfile
@@ -229,32 +226,17 @@ function XML_TestReadWriteBW {
         do
 
 		echo "XXX"
-    	echo "Read test n. $i"
-    	echo "XXX"
+		echo "Read test n. $i"
+		echo "XXX"
 		echo $COUNT
+		ReadTest
 
-		CURR_R_BW=$(sudo hdparm -t /dev/$name | awk 'NR==3 {print $11}')
-		CURR_R_BW=${CURR_R_BW%.*}
-		R_BW=$(($R_BW + $CURR_R_BW))
-		COUNT=$(($COUNT + 5))
-		
-
-        # echo "Write test no. $i"
 		echo "XXX"
     	echo "Write test n. $i"
     	echo "XXX"
 		echo $COUNT
-
-		DD_OUT=$(dd if=/dev/zero of=./$TEMP_FILE bs=4k count=250k conv=fdatasync 2>&1 >/dev/null | awk 'NR==3{print $10, $11}')
-		CURR_W_BW=$(echo $DD_OUT | awk '{print $1}' | tr ',' '.')
-		if [[ "$(echo $DD_OUT | awk '{print $2}')" == "GB/s" ]]; then
-			CURR_W_BW=$((CURR_W_BW * 1000))
-		fi	
-		COUNT=$(($COUNT + 5))
+		WriteTest
 		
-		CURR_W_BW=${CURR_W_BW%.*}
-		W_BW=$(($W_BW + CURR_W_BW))
-
         rm ./$TEMP_FILE
     	done
 
@@ -279,6 +261,29 @@ function XML_TestReadWriteBW {
 	clear
 	rm ./$TEMP_FILE
 }
+
+function XML_GenStorageDevices {
+	bbqid=0
+	lsblk --output NAME,MAJ:MIN,SIZE,TYPE | grep disk | \
+	while read i
+	do
+		name=`echo $i | awk '{ print $1 }'`
+		devid=`echo $i | awk '{ print $2 }'`
+		size=`echo $i | awk '{ print $3 }' | sed s/[A-Z]//g` # not used
+		unit=`echo $i | awk '{ print $3 }' | sed s/[0-9]//g` # not used
+		
+		TYPE=""
+		R_BW=100
+		W_BW=100
+
+		XML_GetStorageDeviceType
+		XML_TestReadWriteBW
+
+		echo "    <storage id=\"$bbqid\" dev=\"$devid\" name=\"$name\" quantity=\"$size\" unit=\"MB\" bw_unit=\"MB/s\" read_bandwidth=\"$R_BW\" write_bandwidth=\"$W_BW\" type=\"$TYPE\"/>" >> $TMP_FOLDER/xml_disks
+		bbqid=`expr $bbqid + 1`
+	done
+}
+
 
 function XML_WriteHead {
 	echo "<?xml version=\"1.0\" encoding=\"UTF-8\"?>" > $TARGET_SYS
