--- a/config/pil/generator_xml.in
+++ b/config/pil/generator_xml.in
@@ -171,7 +171,7 @@ function SetManagedPartition {
 }
 
 function XML_GetStorageDeviceType {
-	TYPES=(HDD SSD)
+	TYPES=(hdd ssd)
 		if [ -e /sys/block/$name/queue/rotational ]; then
 			if [ $(cat /sys/block/$name/queue/rotational) -eq 0 ]; then
 				TYPE=${TYPES[1]}
@@ -304,7 +304,7 @@ function XML_GenStorageDevices {
 		XML_GetStorageDeviceType
 		XML_TestReadWriteBW
 
-		echo "    <storage id=\"$bbqid\" dev=\"$devid\" name=\"$name\" quantity=\"$size\" unit=\"MB\" bw_unit=\"MB/s\" read_bandwidth=\"$R_BW\" write_bandwidth=\"$W_BW\" type=\"$TYPE\"/>" >> $TMP_FOLDER/xml_disks
+		echo "    <storage id=\"$bbqid\" dev=\"$devid\" name=\"$name\" quantity=\"$size\" unit=\"GB\" bw_unit=\"MB/s\" read_bandwidth=\"$R_BW\" write_bandwidth=\"$W_BW\" type=\"$TYPE\"/>" >> $TMP_FOLDER/xml_disks
 		bbqid=`expr $bbqid + 1`
 	done
 }
