[PIL] Generator: fixed minor error.
Signed-off-by: Alessandro Bertani <alessandro.bertani@mail.polimi.it>

--- a/config/pil/generator_xml.in
+++ b/config/pil/generator_xml.in
@@ -164,7 +164,7 @@ function SetManagedPartition {
 
 	MDEV_PES=$(cat $DIALOG_TEMP_FILE)
 
-	if [ "$HOST_PES" == "" ]; then
+	if [ "$MDEV_PES" == "" ]; then
 		echo "No managed device selected. Aborting."
 		CloseGenerator
 	fi
